# keplerian-sim

./: .gitignore  CREDITS.md  Cargo.toml  README.md  build.rs  clippy.toml  deny.toml
.github/scripts/: attribution-checker.py
.github/workflows/: attribution-checker.yml  rust.yml
benches/: eccentric_anomaly.rs  position.rs  position_time.rs  sinhcosh.rs  speed.rs  state_vectors.rs  state_vectors_time.rs  tilting.rs  transformations.rs  true_anomaly.rs  velocity.rs  velocity_time.rs
examples/: dump-orbits.rs  no-std.rs  simulate.rs
images/: README.md
src/: body.rs  cached_orbit.rs  compact_orbit.rs  generated_sinh_approximator.rs  lib.rs  math.rs  reexports.rs  solvers.rs  tests.rs  universe.rs
src/body_presets/: dwarf_planets.rs  moons.rs  planets.rs  stars.rs
src/dim2/: cached_orbit.rs  compact_orbit.rs  mod.rs
src/dim3/: cached_orbit.rs  compact_orbit.rs  mod.rs
src/tests/: assertions.rs  mod.rs  polling.rs  seeders.rs
