[package]
name = "keplerian_sim"
description = "A Keplerian orbit library"
license = "GPL-3.0-or-later"
version = "0.6.2"
edition = "2021"
keywords = [
    "kepler",
    "orbit",
    "simulation",
    "patchedconics",
    "kerbalspaceprogram",
]
categories = ["aerospace::simulation", "simulation", "science"]
include = [
    "/src",
    "README.md",
    "LICENSE",
    "Cargo.toml",
    "Cargo.lock",
    "CREDITS.md",
]
repository = "https://github.com/Not-A-Normal-Robot/keplerian-sim"
# When changing MSRV below, don't forget to change the README!
rust-version = "1.81.0"

[dependencies]
glam = { version = "0.30.1", features = [
    "serde",
    "nostd-libm",
], default-features = false }
serde = { version = "1.0.219", optional = true, features = [
    "derive",
], default-features = false }
mint = { version = "0.5.9", optional = true, default-features = false }
libm = { version = "0.2.15", optional = true }

[features]
default = ["std"]
std = []
libm = ["dep:libm"]
serde = ["dep:serde"]
mint = ["dep:mint"]
mint-serde = ["mint", "serde", "mint/serde"]
fast-math = ["glam/fast-math"]

[build-dependencies]
libm = "0.2.13"

[dev-dependencies]
criterion = "0.7"
rand = "0.9.1"

[[bench]]
name = "eccentric_anomaly"
harness = false

[[bench]]
name = "true_anomaly"
harness = false

[[bench]]
name = "tilting"
harness = false

[[bench]]
name = "position"
harness = false

[[bench]]
name = "position_time"
harness = false

[[bench]]
name = "velocity"
harness = false

[[bench]]
name = "velocity_time"
harness = false

[[bench]]
name = "state_vectors"
harness = false

[[bench]]
name = "state_vectors_time"
harness = false

[[bench]]
name = "sinhcosh"
harness = false

[[example]]
name = "no-std"
required-features = ["libm"]
