[package]
name = "keplerian_sim"
description = "A Keplerian orbit library"
license = "GPL-3.0-or-later"
version = "0.7.1"
edition = "2021"
keywords = [
    "kepler",
    "orbit",
    "simulation",
    "patchedconics",
    "kerbalspaceprogram",
]
categories = ["aerospace::simulation", "simulation", "science"]
include = [
    "/src",
    "README.md",
    "LICENSE",
    "Cargo.toml",
    "Cargo.lock",
    "CREDITS.md",
]
repository = "https://github.com/Not-A-Normal-Robot/keplerian-sim"
# When changing MSRV below, don't forget to change the README!
rust-version = "1.81.0"

[dependencies]
glam = { version = "0.30.1", features = [
    "serde",
    "nostd-libm",
], default-features = false }
serde = { version = "1", optional = true, features = [
    "derive",
], default-features = false }
mint = { version = "0.5.9", optional = true, default-features = false }
libm = { version = "0.2.15", optional = true }

[features]
default = ["std"]
# Use std's math functions. Requires std to be available.
# In a no_std environment, use libm instead of std.
std = []
# Use libm's math functions.
# Will not override the `std` feature.
libm = ["dep:libm"]
# Enables serde Serialize and Deserialize support on structs.
serde = ["dep:serde"]
# Enables inter-crate interoperability for `Matrix3x2` using the `mint` crate.
mint = ["dep:mint"]
# Enables mint and mint's `serde` feature.
mint-serde = ["mint", "serde", "mint/serde"]
# Enable glam's `fast-math` feature flag.
# glam docs:
# > Enables platform specific optimizations that might speed-up certain operations.
# > This will cause APIs to output different results depending on the platform used and will likely break cross-platform determinism.
# > This should NOT be enabled by intermediate libraries, deferring the decision to the end binary build instead.
fast-math = ["glam/fast-math"]

[build-dependencies]
libm = "0.2.13"

[dev-dependencies]
criterion = "0.7"
rand = "0.9.1"

[[bench]]
name = "eccentric_anomaly"
harness = false

[[bench]]
name = "true_anomaly"
harness = false

[[bench]]
name = "transformations"
harness = false

[[bench]]
name = "position"
harness = false

[[bench]]
name = "velocity"
harness = false

[[bench]]
name = "state_vectors"
harness = false

[[bench]]
name = "speed"
harness = false

[[bench]]
name = "sinhcosh"
harness = false

[[example]]
name = "no-std"
required-features = ["libm"]
